@@ -25,7 +25,7 @@
  *			   University of Maryland at College Park
  */
 /*
- * $Id: diskfile.c,v 1.95.2.5 2006/11/24 18:05:06 martinea Exp $
+ * $Id: diskfile.c,v 1.95.2.6 2007/01/10 16:18:47 martinea Exp $
  *
  * read disklist file
  */
@@ -571,23 +571,11 @@ parse_diskline(
 
     disk->dtype_name	     = dtype->name;
     disk->program	     = dumptype_get_program(dtype);
-    if(dumptype_get_exclude(dtype).type == 0) {
-	disk->exclude_list   = duplicate_sl(dumptype_get_exclude(dtype).sl);
-	disk->exclude_file   = NULL;
-    }
-    else {
-	disk->exclude_file   = duplicate_sl(dumptype_get_exclude(dtype).sl);
-	disk->exclude_list   = NULL;
-    }
+    disk->exclude_list     = duplicate_sl(dumptype_get_exclude(dtype).sl_list);
+    disk->exclude_file     = duplicate_sl(dumptype_get_exclude(dtype).sl_file);
     disk->exclude_optional   = dumptype_get_exclude(dtype).optional;
-    if(dumptype_get_include(dtype).type == 0) {
-	disk->include_list   = duplicate_sl(dumptype_get_include(dtype).sl);
-	disk->include_file   = NULL;
-    }
-    else {
-	disk->include_file   = duplicate_sl(dumptype_get_include(dtype).sl);
-	disk->include_list   = NULL;
-    }
+    disk->include_list     = duplicate_sl(dumptype_get_include(dtype).sl_list);
+    disk->include_file     = duplicate_sl(dumptype_get_include(dtype).sl_file);
     disk->include_optional   = dumptype_get_include(dtype).optional;
     disk->priority	     = dumptype_get_priority(dtype);
     disk->dumpcycle	     = dumptype_get_dumpcycle(dtype);
